# pgp-key-generation

./: .clang-tidy  CMakeLists.txt  CppCheckSuppressions.txt  DESIGN.md  Dockerfile  README.md  assert_release.cpp  clang_analyze.sh  const_word_iterator.h  derived_key.h  deterministic_rng.cpp  deterministic_rng.h  errors.h  generate-derived-key.cpp  generate_derived_key.cpp  generate_key.cpp  generate_key.h  hexadecimal.h  identity_hash.h  master_key.h  nonce.h  packet_utils.cpp  packet_utils.h  parameters.cpp  parameters.h  parameters_ecdsa.cpp  parameters_ecdsa.h  parameters_eddsa.cpp  parameters_eddsa.h  parameters_rsa.cpp  parameters_rsa.h  secure_string.h  time_utils.cpp  time_utils.h
.github/workflows/: ci.yml  macos.yml
cmake/Modules/: CheckCXX17SourceRuns.cmake  FindCryptoPP.cmake
cmake/tests/: std_span_test.cpp
mnemonics/: czech.h  encode.h  language.h
src/extend_key_expiry/: CMakeLists.txt  extend_key_expiry.cpp  options.cpp  options.h  public_key.cpp  public_key.h
src/generate_derived_key/: CMakeLists.txt  generate_derived_key.cpp  options.cpp  options.h
src/shared/: CMakeLists.txt  assert_release.h  derived_key.h  deterministic_rng.cpp  encryption_key.h  errors.h  generate_key.h  hexadecimal.h  master_key.h  packet_utils.cpp  parameters.cpp  parameters_ecdsa.h  parameters_eddsa.h  parameters_rsa.cpp
src/shared/mnemonics/: chinese_simplified.h  chinese_traditional.h  encode.h  english.h  french.h  italian.h  japanese.h  korean.h  spanish.h
src/shared/util/: options.cpp  options.h  output.h
tests/: CMakeLists.txt  date_utils.py  fail_reproduction.sh  generate.py  integration_test.py  packet_parser.py
util/: array.h  base_conversion.h  number_type.h
util/detail/: base_conversion.h
